Questão 5 - Realiza o cadastro do movimento
