# src/Questao5/Application/Commands/CreateMovements/CreateMovementCommandValidator.cs
@@ -1,5 +1,6 @@
-﻿using System;
-using FluentValidation;
+﻿using FluentValidation;
+using Questao5.Domain.Enumerators;
+using System;
 
 namespace Questao5.Application.Commands.Movements;
 
@@ -11,19 +12,22 @@ public class CreateMovementCommandValidator : AbstractValidator<CreateMovementCo
             .Must(BeValidId)
             .WithErrorCode("INVALID_REQUEST_ID");
 
-        RuleFor(x => x.AccountId)
-            .Must(BeValidId)
-            .WithErrorCode("INVALID_ACCOUNT_ID");
+        RuleFor(x => x.AccountNumber)
+            .GreaterThan(0)
+            .WithErrorCode("INVALID_ACCOUNT_NUMBER");
 
         RuleFor(x => x.Amount)
             .GreaterThan(0)
             .WithErrorCode("INVALID_VALUE");
 
         RuleFor(x => x.MovementType)
-            .IsInEnum()
+            .Must(BePresentInEnum)
             .WithErrorCode("INVALID_TYPE");
     }
 
     private bool BeValidId(string id)
         => Guid.TryParse(id, out _);
+
+    private bool BePresentInEnum(string movementType)
+        => Enum.IsDefined(typeof(MovementTypeEnum), movementType);
 }
