# src/Questao5/Application/Commands/CreateMovements/Models/CreateMovementCommandResponse.cs
@@ -1,6 +1,8 @@
-﻿namespace Questao5.Application.Commands.Movements.Models;
+﻿using System;
+
+namespace Questao5.Application.Commands.Movements.Models;
 
 public class CreateMovementCommandResponse
 {
-    
+    public Guid MovementId { get; set; }
 }
